<!--fml - fragment movie list, fmd - fragment movie details, fp - fragment profile-->
<resources>
    <string name="app_name">MTS</string>
    <string name="fmd_background_movie_details">Стэтхэм</string>
    <string name="fmd_date">22.04.2021</string>
    <string name="fmd_name">Гнев человеческий</string>
    <string name="fmd_description">Эйч — загадочный и холодный на вид джентльмен, но внутри него пылает жажда справедливости. Преследуя свои мотивы, он внедряется в инкассаторскую компанию, чтобы выйти на соучастников серии многомиллионных ограблений, потрясших Лос-Анджелес. В этой запутанной игре у каждого своя роль, но под подозрением оказываются все. Виновных же обязательно постигнет гнев человеческий.</string>
    <string name="fmd_actors">Актеры</string>
    <string name="fmd_type">боевики</string>
    <string name="fmd_actor_name_2">Холт Маккэллани</string>
    <string name="fmd_actor_name_1">Джейсон Стэйтем</string>
    <string name="fmd_actor_name_3">Холт Маккэллани</string>
    <string name="age">18+</string>
    <string name="fmd_empty_star">empty star</string>
    <string name="fmd_star">star</string>
    <string name="fmd_actor2">makellani</string>
    <string name="fmd_actor3">harnnet</string>
    <string name="return_home">return home</string>
    <string name="return_profile">return profile</string>
    <string name="fmd_image_of_the_film">Image of the film</string>
    <string name="fmd_category">category</string>
    <string name="fml_popular_now">Популярное сейчас</string>
    <string name="fp_exit">Выйти</string>
    <string name="fp_report_about_error">Сообщить о проблеме</string>
    <string name="fp_ask_question">Задать вопрос</string>
    <string name="fp_app">Приложение</string>
    <string name="fp_data_and_memory">Данные и память</string>
    <string name="fp_language">Язык</string>
    <string name="fp_theme">Тема</string>
    <string name="fp_confidetial">Конфедициальность</string>
    <string name="fp_notifaticaons">Уведомления и звуки</string>
    <string name="fp_settings">Настройки</string>
    <string name="fp_number">Телефон</string>
    <string name="fp_email">konst.89@mail.com</string>
    <string name="fp_password">*************</string>
    <string name="fp_name_profile">Константин</string>
    <string name="fp_name_profile_title">Имя</string>
    <string name="fp_data_profile">Личные данные</string>
    <string name="fp_interest">Интересы</string>
</resources>